Bug 1628792 - p1: merge exoplayer r2.11.4 codebase. r=agi,geckoview-reviewers
Reference bugs:
- bug 1341990 (original import)
- bug 1523544 (package renaming)
- bug 1457255 (warning fixes)
- bug 1459420 (Firefox ProxySelector support)

Differential Revision: https://phabricator.services.mozilla.com/D78389

UltraBlame original commit: ac59ea91af14128af9aef40ff2c8960361abe8bc